2016-11-25 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-17: Do not symlink intel-vtune.
	* new llvm-ccdb build rule to generate llvm compiler's commands db in
	etc directory.

2016-11-18 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-16: Make sure that new build rules works with scram V2_2_6.

2016-11-16 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-15: Allow test tag for only test directories.

2016-11-15 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-14: Make use of new test tag for unit tests.

2016-10-06 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-13: Fix enable/disable-biglib rules for patch releases.
	Previous version was not disabling biglib from full base release
	area.

2016-10-05 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-12: typo: use CMD_rm instead of CMS_rm

2016-08-25 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-11:  change directory to lib/arch before running edm class checks so that
	pcm files can be found

2016-08-25 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-10: Fixes for OSX build e.g. call install_name_tool to set full library
	name as its id.

2016-08-17 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-09: Do not run edm checks (e.g. class version/transients)
	checks if SCRAM_NOEDM_CHECKS is set. New build rule edm_checks to explicitly
	run edm checks once shared libs are build. This is useful for testing
	externals to avoid loading shared libs from release area while running edm_checks.

2016-02-19 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-08: Do not read scram caches for proejct Rename.

2016-02-11 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

        * V05-05-07: EDM Class Transients needs pcm and rootmap files to be
	copied in to lib/arch directory before we can run it. Build rules
	updated to copy generated pcm and rootmaps to lib/arch directory
	before link step of library.

2016-01-14 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
